bug fix with overflow image being cut on safari mobile

--- a/src/features/landing-page/components/author-component/AuthorComponent.module.css
+++ b/src/features/landing-page/components/author-component/AuthorComponent.module.css
@@ -12,15 +12,15 @@
     height: auto;
     min-width: 250px;
     width: 100%;
-    border-radius: var(--border-radius);
+
     filter: blur(0.4px);
     position: relative;
-    overflow: hidden;
 }
 
 .image {
     height: 100%;
     width: 100%;
+    border-radius: var(--border-radius);
 }
 
 .imageContainer::after {
